<resources>
    <string name="app_name">AIR-O-INSPECT</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fly">FLY</string>
    <string name="time_and_place">Time and Place</string>
    <string name="wind">Wind Speed</string>
    <string name="sun_or_visibility">Sun or Visibility</string>
    <string name="temperature">Temperature</string>
    <string name="precipitation">Precipitation</string>
    <string name="unit_for_chart">Unit for chart</string>
    <string name="maximum_unit">Maximum Unit</string>
    <string name="more_data">More Data</string>
    <string name="go_back">Go Back</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <string name="location_access_required">Location access is required to receive the location.</string>
    <string name="location_unavailable">Location access is required to receive the location.</string>
    <string name="ok">OK</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <integer name="wind_default">10</integer>
    <integer name="wind_gust_default">15</integer>
    <integer name="precipitation_default">5</integer>
    <integer name="precipitation_probability_default">50</integer>
    <integer name="temperature_default">5</integer>
    <integer name="cloud_cover_default">30</integer>
    <integer name="visibility_default">5</integer>
    <bool name="wind_default">true</bool>
    <bool name="wind_gust_default">true</bool>
    <bool name="sunshine_default">true</bool>
    <bool name="precipitation_default">true</bool>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_reload">Reload</string>

    <string name="tab_1">Forecast1</string>
    <string name="tab_2">Forecast2</string>
    <string name="write_access_required">Write access is required.</string>
    <string name="write_access_unavailable">Write Access is not available.</string>
    <string name="read_access_required">Read access to external storage is required.</string>
    <string name="read_access_unavailable">Read access is not available.</string>
</resources>
