<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/current_fly_status"
                    style="@style/TextviewStyleFly"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/fly">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/current_time_place"
                    style="@style/TextviewStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:baselineAligned="false"
                android:orientation="horizontal"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/imageTemp"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:contentDescription="TODO"
                        android:src="@drawable/temp_icon"
                        tools:ignore="ContentDescription,HardcodedText" />

                    <TextView
                        android:id="@+id/current_temperature"
                        style="@style/TextviewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="bottom|start"
                        android:text="@string/temperature">


                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/imageRain"
                        android:layout_width="0dp"
                        android:layout_height="25dp"

                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:contentDescription="TODO"
                        android:src="@drawable/rain_icon"
                        tools:ignore="ContentDescription,HardcodedText" />

                    <TextView
                        android:id="@+id/current_rain_status"
                        style="@style/TextviewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="bottom|start"
                        android:text="@string/precipitation">

                    </TextView>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2"
                tools:ignore="NestedWeights">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/imageWind"
                        android:layout_width="0dp"
                        android:layout_height="25dp"

                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:contentDescription="TODO"
                        android:src="@drawable/wind_icon"
                        tools:ignore="ContentDescription,HardcodedText" />

                    <TextView
                        android:id="@+id/current_wind"
                        style="@style/TextviewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="bottom|start"
                        android:text="@string/wind" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/imageVisibility"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:contentDescription="TODO"
                        android:src="@drawable/visibility_icon"
                        tools:ignore="ContentDescription,HardcodedText" />

                    <TextView
                        android:id="@+id/current_visibility"
                        style="@style/TextviewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/sun_or_visibility" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>